# train-eval-web

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: checkpoint_links.py  cluster_settings.py  clusters.py  copy_checkpoint.py  data_interface.py  datasets.py  details.py  dexjoco.py  eval_completion.py  eval_harness.py  flags.py  job_identity.py  job_resume.py  jobs.py  k8s_resources.py  kubectl_errors.py  main.py  mlxp.py  mlxp_config.py  mlxp_data_pod.py  mlxp_jobs.py  mlxp_submit.py  move_checkpoint.py  notifications.py  notifications_config.py  output_namespace.py  partitions.py  paths.py  remote_paths.py  resource_presets.py  results.py  slurm_meta.py  ssh.py  submission_snapshot.py  submit.py  time_utils.py  train_overrides.py  training_models.py  variant_values.py  variants.py  (+2 more)
configs/clusters/: kakao.env  mlxp.env  skt.env
configs/experiments/_sample/: README.md  (+1 more)
configs/models/: dexjoco-n16.env  dexjoco-physixel.env  dexjoco-pi05.env  n1.5.env  n1.6.env  physixel.env
docker/mlxp-eval-isaac/: Dockerfile  README.md
docs/: gr00t-data-config-notes.md  md1e59_vs_mbbb90_config_diff.md  physixel-poc1-status.md  physixel_ah40_root_cause_validation_20260526.md
frontend/: package-lock.json  package.json
frontend/public/: site.webmanifest
lib/: _common.sh  eval_body.sh  eval_body_dexjoco.sh  eval_body_n16.sh  isaac_server_runner.py  train_body.sh  train_body_n16.sh
lib/dexjoco/: dexjoco_config.py  dexjoco_config_dual_arm.py  gr00t_dexjoco_server.py
scripts/: experiment_status.py  run.sh
scripts/diagnostics/: physixel_ah40_root_cause.py
(+98 files in other folders)
