[project]
name = "train-eval-web-backend"
version = "0.1.0"
description = "Local FastAPI backend that submits gr00t train/eval jobs to remote slurm clusters over SSH."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.18",
    "wandb>=0.27.0",
]

[tool.uv]
package = false
